--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-alloy = "0.1.0"
+# Ethereum
+alloy = { git = "https://github.com/alloy-rs/alloy.git", features = ["rpc", "rpc-types-eth"]}
+
+# TUI
 crossterm = "0.27.0"
 ratatui = "0.26.1"
+# Async
+eyre = "0.6.12"
+
